# web-blog

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: tests.yml
accounts/: apps.py  forms.py  models.py  urls.py  views.py
accounts/forms/: __init__.py  profile.py  user.py
accounts/migrations/: 0001_initial.py  0002_remove_profile_avatar_profile_image.py
accounts/models/: profile.py
accounts/signals/: __init__.py  profile.py
accounts/views/: __init__.py  login.py  password.py  profile.py  register.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/forms/: __init__.py  comment.py  like.py  post.py
blog/migrations/: 0001_initial.py  0002_post_excerpt.py  0003_remove_post_created_date_post_created_post_image_and_more.py  0004_alter_post_image.py  0005_category_tag_post_published_post_published_at_and_more.py  0006_post_category.py  0007_post_slug.py  0008_alter_like_unique_together.py  0009_remove_comment_name.py  0010_remove_comment_email.py  0011_alter_comment_author_alter_comment_post_and_more.py  0012_remove_post_comments_remove_post_likes_like_value_and_more.py  0013_alter_like_value.py  0014_alter_like_value.py  0015_alter_like_value.py
blog/models/: __init__.py  category.py  comments.py  like.py  post.py  tag.py
blog/views/: __init__.py  about.py  (+4 more)
core/: settings.py  urls.py
fixtures/: development.json
nginx/: default.conf  nginx.conf
templates/: base.html
(+26 files in other folders)
